--- a/Site/index.html
+++ b/Site/index.html
@@ -10,45 +10,57 @@
       <img src="Imagens/logo_sem_fundo.png" alt="Logo_Do_Site" />
       <h1 class="titulo-pagina">Conecta Voluntário</h1>
     </header>
-     <nav>
-      <div class="nav-links">
-       <a href="index.html">Início</a>
-       <a href="sobre.html">Sobre</a>
-       <a href="servicos.html">Serviços</a>
-       <a href="contato.html">Contato</a>
-       <a href="entrar.html">Entrar</a>
-      </div>
-     </nav>
-      <main>
-          <h2 classe="bem_vindo">Bem vindo ao Conecta Voluntário <br /></h2>
-          <p class="conectando-quem-quer">Conectando quem quer ajudar a quem mais precisa</p>
-        </div>
-      </div>
-    <div class="resumo-container">
-      <section class="Resumo">
-        <h3 style="color: #2c7be5">Resumo do App</h3>
-        <p>
-          Nosso aplicativo foi criado com um propósito claro: tornar o
-          voluntariado mais organizado, acessível e eficaz. Ele conecta pessoas
-          dispostas a ajudar com ações sociais que realmente precisam de apoio —
-          como sopões, doações, mutirões e outras iniciativas solidárias. Com
-          uma interface intuitiva, os voluntários podem se cadastrar, visualizar
-          ações disponíveis em suas regiões, entrar em equipes e acompanhar
-          detalhes como horário, local e materiais necessários. Já os
-          organizadores podem montar equipes, divulgar eventos e manter a
-          comunicação fluida com os participantes. Nosso foco é simples:
-          facilitar a mobilização e dar suporte a quem quer transformar o mundo
-          ao seu redor. Porque quando a boa vontade encontra estrutura, o
-          impacto é muito maior.
-        </p>
-      </section>
-      <div class="foto_resumo">
-        <img
-          src="https://i.pinimg.com/736x/91/4c/6a/914c6a028009ced5d207009f46d7362b.jpg"
-          alt="Imagem do app"
-        />
+
+    <!-- Botão flutuante "Entrar" + "Cadastre-se" -->
+    <div class="botao-flutuante-usuario">
+      <img src="Imagens/iconeperfil.png" alt="Ícone usuário" />
+      <div class="texto-entrar">
+        <a href="entrar.html" class="link-duplo">Entre</a>
+        <span> ou </span>
+        <a href="cadastro.html" class="link-duplo">Cadastre-se</a>
       </div>
     </div>
+
+    <nav>
+      <div class="nav-links">
+        <a href="index.html">Início</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="servicos.html">Serviços</a>
+        <a href="contato.html">Contato</a>
+      </div>
+    </nav>
+
+    <main>
+      <h2 class="bem_vindo">Bem vindo ao Conecta Voluntário <br /></h2>
+      <p class="conectando-quem-quer">
+        Conectando quem quer ajudar a quem mais precisa
+      </p>
+
+      <div class="resumo-container">
+        <section class="Resumo">
+          <h3 style="color: #2c7be5">Resumo do App</h3>
+          <p>
+            Nosso aplicativo foi criado com um propósito claro: tornar o
+            voluntariado mais organizado, acessível e eficaz. Ele conecta
+            pessoas dispostas a ajudar com ações sociais que realmente precisam
+            de apoio — como sopões, doações, mutirões e outras iniciativas
+            solidárias. Com uma interface intuitiva, os voluntários podem se
+            cadastrar, visualizar ações disponíveis em suas regiões, entrar em
+            equipes e acompanhar detalhes como horário, local e materiais
+            necessários. Já os organizadores podem montar equipes, divulgar
+            eventos e manter a comunicação fluida com os participantes. Nosso
+            foco é simples: facilitar a mobilização e dar suporte a quem quer
+            transformar o mundo ao seu redor. Porque quando a boa vontade
+            encontra estrutura, o impacto é muito maior.
+          </p>
+        </section>
+        <div class="foto_resumo">
+          <img
+            src="https://i.pinimg.com/736x/91/4c/6a/914c6a028009ced5d207009f46d7362b.jpg"
+            alt="Imagem do app"
+          />
+        </div>
+      </div>
 
       <h2 class="porque-usar">Por que usar nosso app?</h2>
 
@@ -71,22 +83,29 @@
       </div>
     </main>
 
-     <footer class="footer-separado">
-      <!-- Área Esquerda: Botões -->
+    <footer>
       <div class="baixe-nosso-app">
         <p class="titulo-footer">Baixe nosso aplicativo</p>
         <div class="botoes-footer">
-          <button class="app-link">APPLE STORE</button>
-          <button class="app-link">GOOGLE PLAY</button>
+          <button class="app-link">
+            <img src="Imagens/logo_apple.png" alt="Apple" class="icon-app" />
+            APPLE STORE
+          </button>
+          <button class="app-link">
+            <img
+              src="Imagens/googleplay.png"
+              alt="Google Play"
+              class="icon-app"
+            />
+            GOOGLE PLAY
+          </button>
         </div>
       </div>
 
-      <!-- Área Centro: Logo + Texto -->
       <div class="footer-centro">
         <img src="Imagens/logo_sem_fundo.png" alt="Logo_Do_Site" />
         <p>&copy; 2025 Conecta Voluntário</p>
       </div>
-    </main>
     </footer>
 
     <script>
