--- a/Site/servicos.html
+++ b/Site/servicos.html
@@ -10,63 +10,110 @@
       <img src="Imagens/logo_sem_fundo.png" alt="Logo_Do_Site" />
       <h1 class="titulo-pagina">Conecta Voluntário</h1>
     </header>
-     <nav>
-      <div class="nav-links">
-       <a href="index.html">Início</a>
-       <a href="sobre.html">Sobre</a>
-       <a href="servicos.html">Serviços</a>
-       <a href="contato.html">Contato</a>
-       <a href="entrar.html">Entrar</a>
+
+    <!-- Botão flutuante "Entre ou Cadastre-se" -->
+    <div class="botao-flutuante-usuario">
+      <img src="Imagens/iconeperfil.png" alt="Ícone usuário" />
+      <div class="texto-entrar">
+        <a href="entrar.html" class="link-duplo">Entre</a>
+        <span> ou </span>
+        <a href="cadastro.html" class="link-duplo">Cadastre-se</a>
       </div>
-     </nav>
+    </div>
+
+    <nav>
+      <div class="nav-links">
+        <a href="index.html">Início</a>
+        <a href="sobre.html">Sobre</a>
+        <a href="servicos.html">Serviços</a>
+        <a href="contato.html">Contato</a>
+      </div>
+    </nav>
+
     <main>
       <h2 classe="o-que-oferecemos">O que oferecemos</h2>
       <div class="caixa-galeria">
+        <p class="texto-caixa-galeria">
+          Passe o cursos sobre as imagens para mais informação
+        </p>
         <div class="galeria-servicos">
           <div class="imagem-com-legenda">
             <p class="titulo-img-galeria">Feed de Atividades</p>
             <img src="Imagens/img1_tela_inicio_app.png" alt="Tela_Inicial" />
+            <div class="hover-texto">
+              Publique suas atividades e acompanhe <br />ações de outras pessoas
+              e ONGs.
+            </div>
           </div>
 
           <div class="imagem-com-legenda">
             <p class="titulo-img-galeria">Encontrar ONGs</p>
             <img src="Imagens/img2_tela_ongs_app.png" alt="Tela_ONGs" />
+            <div class="hover-texto">
+              Encontre ONGs cadastradas no nosso aplicativo<br />
+              ou cadastre sua ONG no botão de "+".
+            </div>
           </div>
 
           <div class="imagem-com-legenda">
             <p class="titulo-img-galeria">Promover ou Participar</p>
             <img src="Imagens/img3_tela_eventos_app.png" alt="Tela_Eventos" />
+            <div class="hover-texto">
+              Crie um evento para que outros voluntários<br />
+              possam participar junto a você<br />
+              ou participe de um evento como voluntário.<br />
+              Apenas ONGs cadastradas e voluntários<br />
+              bem Ranqueados podem criar um evento.
+            </div>
           </div>
 
           <div class="imagem-com-legenda">
             <p class="titulo-img-galeria">Ranking de atividades</p>
             <img src="Imagens/img4_tela_rank_app.png" alt="Tela_Rank" />
+            <div class="hover-texto">
+              Este é o sistema de pontuação,<br />receba pontos ao participar de
+              atividades<br />
+              ativamente.
+            </div>
           </div>
+
           <div class="imagem-com-legenda">
             <p class="titulo-img-galeria">Conexões</p>
             <img src="Imagens/img5_tela_conexoes_app.png" alt="Tela_Conexoes" />
+            <div class="hover-texto">
+              Faça amigos e conecte-se a eles, aumente<br />
+              suas conexões entre pessoas com interesses<br />
+              semelhantes.
+            </div>
           </div>
         </div>
       </div>
-
     </main>
-    <footer class="footer-separado">
-      <!-- Área Esquerda: Botões -->
+
+    <footer>
       <div class="baixe-nosso-app">
         <p class="titulo-footer">Baixe nosso aplicativo</p>
         <div class="botoes-footer">
-          <button class="app-link">APPLE STORE</button>
-          <button class="app-link">GOOGLE PLAY</button>
+          <button class="app-link">
+            <img src="Imagens/logo_apple.png" alt="Apple" class="icon-app" />
+            APPLE STORE
+          </button>
+          <button class="app-link">
+            <img
+              src="Imagens/googleplay.png"
+              alt="Google Play"
+              class="icon-app"
+            />
+            GOOGLE PLAY
+          </button>
         </div>
       </div>
 
-      <!-- Área Centro: Logo + Texto -->
       <div class="footer-centro">
         <img src="Imagens/logo_sem_fundo.png" alt="Logo_Do_Site" />
         <p>&copy; 2025 Conecta Voluntário</p>
       </div>
     </footer>
-
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const links = document.querySelectorAll("nav a");
